--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <li><a href="#ultimos-produtos">ÚLTIMOS</a></li>
                     <li><a href="#sobre">SOBRE</a></li>
                     <li class="dropdown">
-                        <a href="html/login.html">CONTA</a>
+                        <a href="html/loginEcadastro.html">CONTA</a>
                         <ul class="dropdown-menu">
-                            <li><a href="html/login.html"><i class="fa fa-sign-out-alt"></i> CONTA</a></li>
+                            <li><a href="html/loginEcadastro.html"><i class="fa fa-sign-out-alt"></i> CONTA</a></li>
                         </ul>
                 </ul>
             </nav>
