--- a/html/cadastroEndereco.html
+++ b/html/cadastroEndereco.html
@@ -5,6 +5,7 @@
     <title>HELLOME</title>
     <link rel="icon" href="img/brand_hello_kitty_icon_158867.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/endereco.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script src="../js/endereco.js"></script> 
@@ -17,28 +18,7 @@
 
     <div class="header" id="topo">
     <div class="container">
-        <div class="navbar">
-            <!--CLASSE LOGO E CHAMADA DA LOGO-->
-            <div class="logo">  
-                 <a href="#topo"><img src="img/hello-kitty-poster.png" width="60px" height="55"></a>
-                 
-            </div>
-            <!--NAVEGAÇÃO DA PÁGINA-->
-            <nav>
-                <ul>
-                    <li><a href="#em-categoria">CATEGORIAS</a></li>
-                    <li><a href="#em-destaque">DESTAQUE</a></li>
-                    <li><a href="#ultimos-produtos">ÚLTIMOS</a></li>
-                    <li><a href="#sobre">SOBRE</a></li>
-                    <li class="dropdown">
-                        <a href="html/loginEcadastro.html">CONTA</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="html/loginEcadastro.html"><i class="fa fa-sign-out-alt"></i> CONTA</a></li>
-                        </ul>
-                </ul>
-            </nav>
-            <img src="img/compra.png" width="27px" height="27px">
-        </div>
+
 
         <!--REQUIRED:  validação do lado do cliente que impede que o formulário seja enviado sem que o campo correspondente seja preenchido.-->
     <form id="endereco" > <!-- Formulário de cadastro -->
@@ -69,31 +49,6 @@
     </div>
     </div>
 
-   
-    <footer>
-        <div class="container" id="sobre">
-            <div class="footer-content">
-                <div class="contacts">
-                    <h3>Contatos</h3>
-                    <ul>
-                        <li>Email: timehellome@gmail.com</li>
-                        <li>Telefone: (+55) 11 955544478</li>
-                    </ul>
-                </div>
-                <div class="social-media">
-                    <h3>Redes Sociais</h3>
-                    <div class="social-media-icons">
-                        <a href="https://github.com/seu_usuario_github" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/seu_usuario_linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                </div>
-                <div class="reclame-aqui">
-                    <h3>Reclame Aqui</h3>
-                    <a href="#">Link para sua página no Reclame Aqui</a>
-                </div>
-            </div>
-        </div>
-    </footer>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
