hello kit q volta para index
hello kit q volta para index

--- a/html/endereco.html
+++ b/html/endereco.html
@@ -12,8 +12,12 @@
     
 </head>
 <body> 
-
-  
+    <div class="navbar">
+        <!--CLASSE LOGO E CHAMADA DA LOGO-->
+        <div class="logo">  
+             <a href="/index.html"><img src="../img/hello-kitty-poster.png" width="60px" height="55"></a> 
+        </div>
+    </div>
     <table id="dados-api">
         <td>Id</td>
         <td>Titulo</td>
