--- a/html/endereco.html
+++ b/html/endereco.html
@@ -18,6 +18,10 @@
              <a href="/index.html"><img src="../img/hello-kitty-poster.png" width="60px" height="55"></a> 
         </div>
     </div>
+
+    <!--Cada chamada a appendChild adiciona uma célula à linha, resultando em 
+        uma linha de tabela (<tr>) que contém todas as informações do endereço.-->
+            
     <table id="dados-api">
         <td>Id</td>
         <td>Titulo</td>
