--- a/html/endereco.html
+++ b/html/endereco.html
@@ -29,6 +29,7 @@
         <td>Endereço</td>
         <td>Número</td>
         <td>Complemento</td>
+        <th>Ações</th>
     </table>
         
 
